# otus-cpp-alloc

./: CMakeLists.txt
include/: IPool.h  LocalPool.h  PoolAllocator.h  allocator.h
src/: allocator.cpp  main.cpp
tests/: fixedpoolallocatortest.cc  gtest.cc
